docker-compose configuration
- squashing several bugs

--- a/.env.example
+++ b/.env.example
@@ -1,17 +1,104 @@
+# ================================================
 # Harmony - Self-Hosted Music Streaming
+# Environment Configuration
+# ================================================
 # Copy this file to .env and configure your settings
+# All values shown are defaults unless marked (required)
+
+# ================================================
+# REQUIRED SETTINGS
+# ================================================
 
 # Path to your music library (required)
+# This directory will be mounted read-only into the container
 MEDIA_PATH=/path/to/your/music
 
-# SQLite database location
+# ================================================
+# SERVICE PORTS
+# ================================================
+
+# Backend API port (internal: 8080)
+API_PORT=8080
+
+# Frontend web port (internal: 3000)
+FRONTEND_PORT=3000
+
+# ================================================
+# DATABASE & CACHE
+# ================================================
+
+# SQLite database location (inside container)
 DB_PATH=/data/harmony.db
 
 # Redis connection string
 REDIS_URL=redis://redis:6379
 
-# Backend API port
-API_PORT=8080
+# Redis maximum memory allocation
+REDIS_MAXMEMORY=128mb
 
-# Frontend port
-FRONTEND_PORT=3000
+# ================================================
+# APPLICATION SETTINGS
+# ================================================
+
+# Application version (used for Docker image tags)
+VERSION=1.0.0
+
+# Log level: debug, info, warn, error
+LOG_LEVEL=info
+
+# Timezone (used for timestamps)
+TZ=UTC
+
+# Auto-scan library on startup
+SCAN_ON_STARTUP=false
+
+# ================================================
+# FRONTEND SETTINGS
+# ================================================
+
+# Public URL for API access (from browser)
+# For local development: http://localhost:8080/api/v1
+# For production with reverse proxy: /api/v1
+PUBLIC_API_URL=/api/v1
+
+# Origin URL for CORS and cookies
+# Must match the URL users access the app from
+ORIGIN=http://localhost:3000
+
+# ================================================
+# REVERSE PROXY (Optional - Traefik)
+# ================================================
+# Only needed if using docker-compose.traefik.yml
+
+# Your domain name
+# DOMAIN=music.example.com
+
+# Email for Let's Encrypt certificates
+# ACME_EMAIL=admin@example.com
+
+# Traefik dashboard auth (generate with: htpasswd -nb admin password)
+# TRAEFIK_AUTH=admin:$apr1$xyz$abc
+
+# ================================================
+# RESOURCE LIMITS (Optional)
+# ================================================
+# These are set in docker-compose.yml but can be overridden
+
+# Backend limits
+# BACKEND_CPU_LIMIT=2
+# BACKEND_MEMORY_LIMIT=1G
+
+# Frontend limits
+# FRONTEND_CPU_LIMIT=1
+# FRONTEND_MEMORY_LIMIT=512M
+
+# ================================================
+# DEVELOPMENT SETTINGS
+# ================================================
+# These override production settings when using docker-compose.override.yml
+
+# Enable debug mode (exposes detailed errors)
+# GIN_MODE=debug
+
+# Node environment
+# NODE_ENV=development
