--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,46 +1,73 @@
 # Build stage
 FROM node:20-alpine AS builder
 
+# Build arguments
+ARG VERSION=dev
+ARG PUBLIC_API_URL=/api/v1
+
 WORKDIR /app
 
-# Copy package files
+# Install build dependencies for native modules (if needed)
+RUN apk add --no-cache python3 make g++
+
+# Copy package files for better caching
 COPY package*.json ./
 
-# Install dependencies
+# Install all dependencies (including dev)
 RUN npm ci
 
 # Copy source code
 COPY . .
 
+# Set build-time environment variables
+ENV PUBLIC_API_URL=${PUBLIC_API_URL}
+ENV NODE_ENV=production
+
 # Build the application
 RUN npm run build
 
-# Runtime stage
-FROM node:20-alpine
+# Prune dev dependencies
+RUN npm prune --production
 
-# Create non-root user
-RUN adduser -D -u 1000 harmony
+# Runtime stage
+FROM node:20-alpine AS runtime
+
+# Labels for container metadata
+LABEL org.opencontainers.image.title="Harmony Frontend"
+LABEL org.opencontainers.image.description="Self-hosted music streaming web interface"
+LABEL org.opencontainers.image.vendor="Harmony"
+LABEL org.opencontainers.image.source="https://github.com/yourusername/harmony"
+
+# Install dumb-init for proper signal handling
+RUN apk add --no-cache dumb-init && \
+    rm -rf /var/cache/apk/*
 
 WORKDIR /app
 
-# Copy built application
-COPY --from=builder /app/build ./build
-COPY --from=builder /app/package*.json ./
+# Copy built application from builder (use existing node user from base image)
+COPY --from=builder --chown=node:node /app/build ./build
+COPY --from=builder --chown=node:node /app/package.json ./
+COPY --from=builder --chown=node:node /app/node_modules ./node_modules
 
-# Install production dependencies only
-RUN npm ci --omit=dev && npm cache clean --force
+# Switch to non-root user (node user already exists in node:alpine)
+USER node
 
-# Change ownership
-RUN chown -R harmony:harmony /app
-
-USER harmony
-
+# Expose port
 EXPOSE 3000
 
+# Environment variables
 ENV NODE_ENV=production
 ENV PORT=3000
+ENV HOST=0.0.0.0
+ENV ORIGIN=http://localhost:3000
+ENV BODY_SIZE_LIMIT=Infinity
 
-HEALTHCHECK --interval=30s --timeout=10s --retries=3 \
+# Health check
+HEALTHCHECK --interval=30s --timeout=10s --start-period=10s --retries=3 \
     CMD wget -q --spider http://localhost:3000 || exit 1
 
+# Use dumb-init as PID 1 for proper signal handling
+ENTRYPOINT ["dumb-init", "--"]
+
+# Run the server
 CMD ["node", "build"]
